# BitSentry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bitsentry.py  docker-compose.yml  products.py  requirements-dev.txt  requirements.txt  suite_run.py
.github/workflows/: ci.yml
bitai/: bitai.py
bitcannon/: bitcannon.py
bitgraph/: bitgraph.py
bitintel/: bitintel.py
bitprobe/: NEW_COMPONENTS.md  README.md  bitprobe.py
bitprobe/data/: cve_db.sqlite  cve_meta.json
bitprobe/engines/rust/bitprobe_engine/: Cargo.toml  README.md
bitprobe/engines/rust/bitprobe_engine/src/: main.rs  scan.rs  schema.rs
bitprobe/interfaces/: ENGINE_INTERFACE.md  engine_cli.example.txt  engine_exit_codes.md  engine_request.json  engine_response.contract.json
bitprobe/plugins/: api_discovery.py  base_plugin.py  cve_correlation.py  fingerprinting.py  infrastructure_intel.py  ip_intel.py  network_scanner.py  registry.py  security_headers.py  sensitive_files.py  tls_analysis.py  waf_detection.py
bitprobe/scanner/: asn_db_updater.py  attack_graph.py  baseline.py  config.py  crawler.py  cve_db.py  cve_db_manager.py  cve_matcher.py  cve_updater.py  engine.py  (+10 more)
bitreport/: aggregate.py  bitreport.py  dashboard_writer.py  requirements.txt  suite_build.py  suite_schema.py
bitscope/: bitscope.py
bitspear/: bitspear.py
bitwatch/: bitwatch.py
scripts/: install_bitsentry.sh
tests/: test_bitai_verify.py  test_bitreport_aggregate.py  test_bitreport_cli.py  test_bitscope_subdomain.py  test_bitsentry_parse.py  test_products_cli.py  test_suite_run.py  test_www_apex.py
(+48 files in other folders)
