[package]
name = "bitprobe-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
